# Plugin_Blueprints

./: Cargo.toml  README.md  out.tree
.claude/: settings.local.json
src/: blueprint_types.rs  lib.rs  node_graph.rs  otl_integration.rs  properties.rs
src/core/: definitions.rs  events.rs  graph.rs  mod.rs  serialization.rs  types.rs
src/editor/: mod.rs  panel.rs  panel_render.rs  tabs.rs  toolbar.rs  workspace.rs  workspace_panels.rs
src/features/: mod.rs
src/features/comments/: mod.rs  operations.rs  rendering.rs
src/features/compilation/: compiler.rs  conversion.rs  mod.rs  panel.rs
src/features/connections/: compatibility.rs  mod.rs  operations.rs  rendering.rs
src/features/macros/: mod.rs  operations.rs  panel.rs
src/features/nodes/: mod.rs  operations.rs  rendering.rs  selection.rs
src/features/variables/: mod.rs  operations.rs  panel.rs  rendering.rs  types.rs
src/features/viewport/: coordinates.rs  mod.rs  operations.rs
src/io/: formats.rs  legacy.rs  mod.rs  save_load.rs
src/node_rendering/: layout.rs  mod.rs  renderer.rs
src/panel/: core.rs  graph_conversion.rs  variables.rs
src/rendering/: graph.rs  input.rs  layout.rs  mod.rs  overlay.rs  style.rs
src/ui_components/: mod.rs  node_library.rs  properties.rs
src_old/: blueprint_types.rs  file_drawer.rs  node_graph.rs  variables.rs
src_old/node_rendering/: layout.rs  style.rs
src_old/panel/: compilation.rs  graph_conversion.rs  node_ops.rs  render.rs
