[package]
name = "blueprint_editor_plugin"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "blueprint_editor_plugin"

[dependencies]
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "816d118abff521cc6809b8890b60620033427645" }

# UI dependencies
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "9975af57307bca826cc33908cfda6580c6b84db9" }
ui = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "816d118abff521cc6809b8890b60620033427645" }
ui_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "816d118abff521cc6809b8890b60620033427645" }

# Blueprint editor dependencies
pulsar_std = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "816d118abff521cc6809b8890b60620033427645" }
engine_backend = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "816d118abff521cc6809b8890b60620033427645" }

# Compiler graph types — same revs as used by blueprint_compiler in Pulsar-Native
graphy = { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "0cd1d0c0e8420757f98c480ab9c4ab28e2f63ae0" }
pbgc = { git = "https://github.com/Far-Beyond-Pulsar/PBGC", rev = "6ba336a1a90f19766ee0493cd6c3d415d8bd6438" }
# Direct access to the graph compiler crates (same revs used transitively by blueprint_compiler)
# Utilities
uuid = { version = "1.0", features = ["v4"] }
smol = "2.0"
log = "0.4"
tracing = "0.1.41"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.0"

# For async operations
futures = "0.3"

# Force windows 0.62 to match wgpu-hal and avoid gpu-allocator version conflict
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"] }
