# Market Lab: paths point at sibling submodule `../Pulsar-Native` (do not use upstream’s machine-local `E:/...`).
# If `git submodule update` resets this file, re-apply or maintain a fork.

[package]
name = "blueprint_editor_plugin"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "blueprint_editor_plugin"

[features]
default = []
# FR-06: `engine_backend/marketlab` + OTL smoke after successful blueprint compile.
marketlab = ["engine_backend/marketlab"]

[dependencies]
# Plugin API (local — same binary, no DLL boundary)
plugin_editor_api = { path = "../Pulsar-Native/crates/plugin_editor_api" }

# UI dependencies (local paths so traits resolve to the same crate instance)
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "5848353e2e208eac8c2cccfc7017cecddfcc32cf" }
ui = { path = "../Pulsar-Native/crates/ui" }
ui_common = { path = "../Pulsar-Native/ui-crates/ui_common" }

# Blueprint editor dependencies (local paths)
pulsar_std = { path = "../Pulsar-Native/crates/pulsar_std" }
engine_backend = { path = "../Pulsar-Native/crates/engine_backend" }

# Compiler graph types — same revs as used by blueprint_compiler in Pulsar-Native
graphy = { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "0cd1d0c0e8420757f98c480ab9c4ab28e2f63ae0" }
pbgc = { git = "https://github.com/Far-Beyond-Pulsar/PBGC", rev = "6ba336a1a90f19766ee0493cd6c3d415d8bd6438" }
# Utilities
uuid = { version = "1.0", features = ["v4"] }
smol = "2.0"
log = "0.4"
tracing = "0.1.41"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.0"

# For async operations
futures = "0.3"

# Force windows 0.62 to match wgpu-hal and avoid gpu-allocator version conflict
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"] }
